--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4214107852";
+    const serviceWorkerVersion = "2429011839";
 
 
 
@@ -56,7 +56,7 @@
         },
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine({
-            renderer: 'html'
+            renderer: 'canvaskit'
           }).then(function(appRunner) {
             appRunner.runApp();
           });
