--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
-    <title>yunmai</title>
+    <title>珞珈云脉</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3833705043";
+    const serviceWorkerVersion = "2578849340";
+
 
 
 
@@ -67,6 +68,7 @@
         }
       });
     });
+
 
 
 
